fixed bground.content on mobile layout

--- a/css/modal.css
+++ b/css/modal.css
@@ -232,11 +232,11 @@ main {
   color: #fff;
   padding-top: 10px;
 }
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   .bground > .content {
     height: 100%;
   } 
-}
+} */
 
 .modal-body {
   padding: 15px 8%;
@@ -574,7 +574,7 @@ input[data-error="true"]::after {
 } 
 @media screen and (max-width: 500px) {
   .bground-confirm > .content {
-    height: 100%;
+    height: 597px;
   } 
 }
 
@@ -582,14 +582,25 @@ input[data-error="true"]::after {
   font-weight: 400;
   font-size: 2rem;
   text-align: center;
-  padding: 0 80px;
+  padding: 0 89px;
   position: relative;
   top: 250px;
+}
+@media screen and (max-width: 500px) {
+  .modal-confirm-text {
+    padding: 0 2vw;
+    top: 210px;
+  }
 }
 
 .btn-close {
   top: 560px;
   position: relative;
+}
+@media screen and (max-width: 500px) {
+  .btn-close {
+    top: 410px;
+  }
 }
 
 footer {
